# cajole-object

./: .gitignore  README.md  config.example.toml  pyproject.toml
doc/: PRD.md  PRD_web.md  WEB_REFACTOR_PLAN.md
src/: __init__.py  chat_controller.py  config.py  emotion_analyzer.py  llm_service.py  prompts.py  resource_manager.py  state_manager.py
src/api/: main.py
src/api/routes/: __init__.py  chat.py
tests/: test_chat_controller.py  test_config.py  test_emotion_analyzer.py  test_integration.py  test_llm_service.py  test_prompts.py  test_state_manager.py
web/: package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ChatArea.tsx  Header.tsx  InputBar.tsx  SettingsModal.tsx  SuggestionBar.tsx  Toast.tsx
web/src/contexts/: ChatContext.tsx
web/src/lib/: api.ts  config.ts
